--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # angel3_client: ^4.2.0
   web_socket_channel: ^2.1.0
   dio: ^4.0.5
+  mobx: ^2.0.6+1
   # angel3_client: ^4.2.0
   # angel3_websocket: ^4.1.2
 
