--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,17 +31,11 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  # angel3_client: ^4.2.0
-  web_socket_channel: ^2.1.0
   dio: ^4.0.5
+  mobx: ^2.0.7
   flutter_mobx: ^2.0.4
   json_annotation: ^4.4.0
   get: ^4.6.1
-  # angel3_client: ^4.2.0
-  # angel3_websocket: ^4.1.2
 
 dev_dependencies:
   flutter_test:
