--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_mobx: ^2.0.4
   json_annotation: ^4.4.0
   get: ^4.6.1
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
